--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>docs.gate2all by edubossa</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>docs.gate2all</h1>
+        <p>JSR 356: JavaTM API for WebSocket</p>
 
-  <title>docs.gate2all</title>
-  <meta name="description" content="JSR 356: JavaTM API for WebSocket">
+        <p class="view"><a href="https://github.com/edubossa/WebSocket">View the Project on GitHub <small>edubossa/WebSocket</small></a></p>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">docs.gate2all</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">JSR 356: JavaTM API for WebSocket</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/edubossa/WebSocket/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/edubossa/WebSocket/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/edubossa/WebSocket" class="code">View docs.gate2all on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <hr>
+        <ul>
+          <li><a href="https://github.com/edubossa/WebSocket/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/edubossa/WebSocket/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/edubossa/WebSocket">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <hr>
 
 <p>title: API Reference</p>
 
@@ -1581,26 +1573,13 @@ api.kittens.get()</pre></div>
 </tr>
 </tbody>
 </table>
-        </article>
-      </div>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/edubossa">edubossa</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/edubossa" class="avatar"><img src="https://avatars0.githubusercontent.com/u/5875766?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/edubossa">edubossa</a> maintains <a href="https://github.com/edubossa/WebSocket">docs.gate2all</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/edubossa/WebSocket/tarball/master" class="tar">tar</a><a href="https://github.com/edubossa/WebSocket/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
